<resources>
    <string name="app_name">Ecards</string>
    <string name="tipo">Tipo</string>
    <string name="tiempo_de_entrega">Tiempo de entrega</string>
    <string name="tiempo_restante">Tiempo restante</string>
    <string name="fecha_entrega">Fecha de entrega</string>
    <string name="tiempo_estimado">Tiempo estimado</string>
    <string name="encargado">Encargado</string>
    <string name="tester">Tester</string>
    <string name="crear">Crear</string>
    <string name="titulo">Titulo</string>
    <string name="vr">Vr.</string>
    <string name="tarjeta">tarjeta</string>
    <string name="title_activity_splash_screen">Splash_screen</string>
    <string name="title_activity_crear__pin">Crear_Pin</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="correo">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmacion">Confirmar contraseña</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido">Apellido(s)</string>
    <string name="telefono">Teléfono</string>
    <string name="area">Área</string>
    <string name="recordar">Recordar contraseña</string>
    <string name="ingrese_pin">Ingrese PIN</string>
    <string name="confirmar_pin">Confirmar PIN</string>
    <string name="confirmar">Confirmar</string>
    <string name="URLWS">https://webserver-enriqeangel.c9users.io/</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvide">Olvidé el PIN</string>
    <string name="recuperar">Recuperar</string>
    <string name="codigo">Código</string>
    <string name="cambiar">Cambiar</string>
    <string name="m">Name</string>
    <string name="ma">m</string>
    <string name="imageperfil">TODO</string>
    <string name="seleccionarim">seleccionar</string>
    <string name="continuar">Continuar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="buttoneditar">Button</string>
    <string name="tipo_tarea">Tipo Tarea</string>
    <string name="proyecto">Proyecto</string>
    <string name="link_ayuda">Link Ayuda</string>
    <string name="link_evidencia">Link Evidencia</string>
    <string name="descripcion">Descripcion</string>
    <string name="crear_tarjeta">Crear Tarjeta</string>
    <string name="crear_reunion">Crear Reunion</string>
    <string name="usuarios">Usuarios</string>
    <string name="dashboard">Dashboard</string>
    <string name="rama">Rama</string>
    <string name="corte">Corte</string>
    <string name="crear_tipo_tarea">Crear Tipo Tarea</string>
    <string name="logo">Logo</string>
    <string name="crear_tester">Crear Tester</string>
    <string name="ramas">Ramas</string>
    <string name="ramaS">Rama(s)</string>
    <string name="tipos_tareas">Tipos Tareas</string>
    <string name="proyectos">Proyectos</string>
    <string name="usuarios_nuevos">Usuarios Nuevos</string>
    <string name="tiempo_realizado">Tiempo Realizado</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="lugar">Lugar</string>
    <string name="horas_contratadas">Horas contratadas</string>
    <string name="perfil">Perfil</string>
    <string name="desempe_o">Desempeño</string>
    <string name="tarjetas">Tarjetas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="horas">Horas</string>
    <string name="motivo">Motivo</string>
    <string name="nombre_tarea">Nombre tarea</string>
    <string name="clasificacion_tarea">Clasificación tarea</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar</string>
    <string name="camara">Camara</string>
    <string name="galeria">Galeria</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="fecha_de_entrega">Fecha de entrega</string>
    <string name="tiempo_realizado_2">Tiempo realizado</string>
    <string name="observaciones">Observaciones</string>
    <string name="estado">Estado</string>
    <string name="cliente">Cliente</string>
    <string name="crear_proyecto">Crear Proyecto</string>
    <string name="lider">Lider</string>
    <string name="editarproyecto">Editar Proyecto</string>
    <string name="nombre_proyecto">Nombre proyecto</string>
    <string name="nombre_rama">Nombre rama</string>
    <string name="rol">Rol</string>
</resources>
