<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.enriq.ecards.SignInFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fecha_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/fecha_entrega"
            app:hintTextAppearance="@style/FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fecha_e_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiempo_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/tiempo_estimado"
            app:hintTextAppearance="@style/FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiempo_e_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/encargado"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/encargado"
            android:layout_marginTop="15dp"
            app:ms_arrowColor="@color/casi_negro"
            app:ms_floatingLabelColor="@color/casi_negro"
            app:hintTextAppearance="@style/FloatingLabel"
            />


        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/tester"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/tester"
            android:layout_marginTop="15dp"
            app:ms_arrowColor="@color/casi_negro"
            app:ms_floatingLabelColor="@color/casi_negro"
            app:hintTextAppearance="@style/FloatingLabel"
             />


        <Button
            android:id="@+id/btncrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/crear"
            android:theme="@style/PrimaryButton" />




    </LinearLayout>

</RelativeLayout>