<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/titulo"
            app:hintTextAppearance="@style/FloatingLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tituloin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/tipotarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            app:ms_arrowColor="@color/casi_negro"
            app:ms_floatingLabelColor="@color/casi_negro"
            app:hintTextAppearance="@style/FloatingLabel"
            app:ms_hint="@string/proyecto"
            app:ms_floatingLabelText="@string/proyecto"
            app:ms_enableErrorLabel="true"
            app:ms_multiline="true"
            />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/tipoproyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            app:ms_hint="@string/tipo_tarea"
            app:ms_floatingLabelText="@string/tipo_tarea"
            app:ms_arrowColor="@color/casi_negro"
            app:ms_floatingLabelColor="@color/casi_negro"
            app:hintTextAppearance="@style/FloatingLabel"
            app:ms_enableErrorLabel="true"
            app:ms_multiline="true"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/link_ayuda"
            app:hintTextAppearance="@style/FloatingLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/linkin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/descripcion"
            app:hintTextAppearance="@style/FloatingLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Descripcionin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/evidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/link_evidencia" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>