<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectImagen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:padding="3dp">

            <Button
                android:id="@+id/BTNCamara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camara"
                android:theme="@style/PrimaryButton"/>

            <Button
                android:id="@+id/BTNGaleria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/galeria"
                android:theme="@style/PrimaryButton"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/PreView"
            android:layout_width="match_parent"
            android:layout_height="465dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_dialog" />

        <Button
            android:id="@+id/BTNSeleccionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="bottom"
            android:text="@string/seleccionar"
            android:theme="@style/PrimaryButton"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
