<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"/>

        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/encargado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    app:ms_arrowColor="@color/casi_negro"
                    app:ms_floatingLabelColor="@color/casi_negro"
                    app:hintTextAppearance="@style/FloatingLabel"
                    app:ms_hint="@string/encargado"
                    app:ms_floatingLabelText="@string/encargado"
                    app:ms_enableErrorLabel="true"
                    />



                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/proyecto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:ms_arrowColor="@color/casi_negro"
                    app:ms_floatingLabelColor="@color/casi_negro"
                    app:hintTextAppearance="@style/FloatingLabel"
                    app:ms_hint="@string/proyecto"
                    app:ms_floatingLabelText="@string/proyecto"
                    app:ms_enableErrorLabel="true"
                    />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fecha_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:hint="@string/fecha_entrega"
                    app:hintTextAppearance="@style/FloatingLabel"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/Error">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/EDTfecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:theme="@style/EditText"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:hint="@string/link_ayuda"
                    app:hintTextAppearance="@style/FloatingLabel"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/Error">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:theme="@style/EditText" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/campo_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/descripcion"
                    app:hintTextAppearance="@style/FloatingLabel"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/Error">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:theme="@style/EditText" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/evidencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/link_evidencia" />


                <Button
                    android:id="@+id/BTNCrearTester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="18dp"
                    android:layout_gravity="end"
                    android:text="@string/crear_tester"
                    android:theme="@style/PrimaryButton"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>