<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.woldev.enriq.ecards.FragmentLogin">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_height="140dp"
            android:layout_width="140dp"
            android:background="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            tools:ignored="ContentDescription"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/campo_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/correo"
            app:errorTextAppearance="@style/Error"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/FloatingLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/campo_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center_horizontal|bottom"
            android:hint="@string/contrasena"
            app:hintTextAppearance="@style/FloatingLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/Error"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/casi_negro">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:theme="@style/EditText"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/iniciar_sesion"
            android:theme="@style/PrimaryButton"
            />

        <TextView
            android:id="@+id/recuperar_contrasena"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:contextClickable="false"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/fondo_oscuro"
            android:text="@string/recordar"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</FrameLayout>